# pyonair-zoom-intelligence

./: .env.example  README.md  pyproject.toml
app/: __init__.py  main.py
app/api/: __init__.py  routes.py
app/core/: config.py  logging.py
app/models/: __init__.py  meeting.py
app/services/: __init__.py  ai_processor.py  demo_provider.py  meeting_manager.py  recall_client.py  transcript_handler.py
app/utils/: __init__.py
config/: settings.toml
dashboard/: index.html  meeting.html
dashboard/css/: styles.css
dashboard/js/: api.js  meeting-detail.js  meetings.js
tests/: __init__.py  conftest.py  test_ai_processor.py  test_api.py  test_demo_provider.py  test_models.py  test_transcript_handler.py
